@@ -203,7 +203,7 @@ sub xst_font_info_get_from_ttf2pt1
   
   $fd = &xst_file_run_pipe_read ("ttf2pt1 -A $file -");
   @buff = <$fd>;
-  close $fd;
+  &xst_file_close ($fd);
 
   $info = &xst_font_info_get_from_afm_buff (\@buff);
   $$info{"file"} = $file;
